# bun-unpack

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/bun_unpack/: binary.py  cli.py  errors.py  extract.py  module_graph.py  paths.py  sourcemap.py  types.py
tests/: test_integration.py  test_paths.py
