[project]
name = "bun-unpack"
version = "0.1.0"
description = "Extract bundled JavaScript/TypeScript files from Bun compiled executables"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lief>=0.17.2",
    "zstandard>=0.25.0",
]

[project.scripts]
bun-unpack = "bun_unpack.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bun_unpack"]
